--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
           "options": {
             "outputPath": "dist/admin-front",
             "index": "src/index.html",
+            "baseHref": "/EasyFinancesAdminApp/",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -37,9 +38,12 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -95,9 +99,12 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           }
         }
       }
