--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "copyfiles": "^2.4.1",
-    "jasmine-core": "^5.1.0",
-    "karma": "^6.4.2",
+    "jasmine-core": "^4.6.1",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "^5.0.0",
     "karma-jasmine-html-reporter": "^2.0.0",
+    "karma-sonarqube-unit-reporter": "^0.0.23",
     "typescript": "~5.5.2"
   }
 }
