--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,15 +1,17 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    "types": ["jasmine", "node"],
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node" 
   },
+  "files": [
+    "src/polyfills.ts"
+  ],
   "include": [
-    "src/**/*.spec.ts",
+    "src/**/*.spec.ts", 
     "src/**/*.d.ts"
   ]
 }
